--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0"
+    "react-native-screens": "^3.4.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -29,6 +30,7 @@
     "@types/react": "^17.0.11",
     "@types/react-native": "^0.64.10",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.10",
     "babel-jest": "^27.0.2",
     "eslint": "^7.29.0",
     "jest": "^27.0.4",
