--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
+    "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "^3.4.0",
     "styled-components": "^5.3.0"
   },
