--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "^3.4.0",
+    "react-native-splash-screen": "3.0.6",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
