--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "petgram",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "^3.4.0",
+    "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-splash-screen": "3.0.6",
     "styled-components": "^5.3.0"
   },
