--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react-native-screens": "^3.4.0",
     "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-splash-screen": "3.0.6",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
